# crawler

./: .gitignore  Dockerfile  Makefile  README.md  buf.gen.yaml  docker-compose.yml  go.mod  go.sum  pyproject.toml
.github/workflows/: crawler-health.yml
cmd/cinemaprobe/: main.go
cmd/crawler/: main.go
cmd/crawlerctl/: main.go
cmd/enrich/: main.go  matcher.go
cmd/langmerge/: dedup.go  main.go
cmd/ottcrawl/: main.go
cmd/personfetch/: main.go
cmd/tagger/: main.go
cmd/tmdbfetch/: main.go
cmd/watchproviders/: main.go
cmd/wikifilter/: main.go
cmd/wikiyear/: main.go
data/lang/: DEDUP_STRATEGY.md  SOURCES.md
data/ott/: CRAWL_PRIORITIES.md  CRAWL_STRATEGY.md  cinema_probe.json  global_ott_probe.json  indian_ott_probe.json  registry.json
internal/config/: config.go
internal/parser/: parser.go  parser_test.go
internal/queue/: queue.go
internal/queue/memory/: memory.go
internal/queue/redis/: redis.go  redis_test.go
internal/ratelimit/: limiter.go
internal/ratelimit/memory/: memory.go
internal/ratelimit/redis/: redis.go  redis_test.go
internal/robots/: robots.go  robots_test.go  sitemap.go
internal/server/: crawl.go  project.go  project_test.go  ratelimit.go  robots.go  server.go
internal/state/: state.go
internal/state/redis/: redis.go  redis_test.go
internal/state/sqlite/: sqlite.go
internal/storage/: storage.go
internal/strategy/: strategy.go
internal/worker/: worker.go
src/crawler/: __init__.py  __main__.py  cli.py  config.py  engine.py  extractor.py  fetcher.py  frontier.py  robots.py  sitemap.py  writer.py
(+15 files in other folders)
