[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crawler"
version = "0.1.0"
description = "A two-mode async web crawler: polite (respects robots.txt, sitemaps, crawl-delay) and full (unrestricted)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
crawler = "crawler.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/crawler"]
